--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "live-server": "^1.2.1"
   },
   "devDependencies": {},
