created file for history and removed comments

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "requirejs": "^2.3.6"
   }
 }
