--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "browserify": "^16.2.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
